--- a/course_project/course_project_Final.ipynb
+++ b/course_project/course_project_Final.ipynb
@@ -2300,9 +2300,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 53.3 s, sys: 2.07 s, total: 55.4 s\n",
+      "Wall time: 34.6 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "result_eval_ranker['own_rec'] = recommended_items(0, result_eval_ranker[USER_COL], N_PREDICT, recommender.get_own_recommendations)\n",
@@ -2311,16 +2320,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'TOPK_PRECISION = 5'"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "f'TOPK_PRECISION = {TOPK_PRECISION}'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2340,7 +2360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2350,9 +2370,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('reranked_als_rec', 0.9356133266027202)\n",
+      "('als_rec', 0.13084300858152378)\n",
+      "('own_rec', 0.02796567390206973)\n",
+      "TOPK_PRECISION = 5\n"
+     ]
+    }
+   ],
    "source": [
     "data_val_ranker = df_preparation(data_val_ranker, keep_columns=columns)\n",
     "data_val_ranker = df_merge_features(data_val_ranker, item_features, user_features)\n",
@@ -2369,7 +2400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2378,7 +2409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2394,7 +2425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2406,7 +2437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2415,20 +2446,207 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>basket_id</th>\n",
+       "      <th>day</th>\n",
+       "      <th>item_id</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>sales_value</th>\n",
+       "      <th>store_id</th>\n",
+       "      <th>retail_disc</th>\n",
+       "      <th>trans_time</th>\n",
+       "      <th>week_no</th>\n",
+       "      <th>coupon_disc</th>\n",
+       "      <th>coupon_match_disc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1340</td>\n",
+       "      <td>41652823310</td>\n",
+       "      <td>664</td>\n",
+       "      <td>912987</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8.49</td>\n",
+       "      <td>446</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>52</td>\n",
+       "      <td>96</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>588</td>\n",
+       "      <td>41652838477</td>\n",
+       "      <td>664</td>\n",
+       "      <td>1024426</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6.29</td>\n",
+       "      <td>388</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>96</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2070</td>\n",
+       "      <td>41652857291</td>\n",
+       "      <td>664</td>\n",
+       "      <td>995242</td>\n",
+       "      <td>5</td>\n",
+       "      <td>9.10</td>\n",
+       "      <td>311</td>\n",
+       "      <td>-0.6</td>\n",
+       "      <td>46</td>\n",
+       "      <td>96</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1602</td>\n",
+       "      <td>41665647035</td>\n",
+       "      <td>664</td>\n",
+       "      <td>827939</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7.99</td>\n",
+       "      <td>334</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1741</td>\n",
+       "      <td>96</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1602</td>\n",
+       "      <td>41665647035</td>\n",
+       "      <td>664</td>\n",
+       "      <td>927712</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.59</td>\n",
+       "      <td>334</td>\n",
+       "      <td>-0.4</td>\n",
+       "      <td>1741</td>\n",
+       "      <td>96</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   user_id    basket_id  day  item_id  quantity  sales_value  store_id  \\\n",
+       "0     1340  41652823310  664   912987         1         8.49       446   \n",
+       "1      588  41652838477  664  1024426         1         6.29       388   \n",
+       "2     2070  41652857291  664   995242         5         9.10       311   \n",
+       "3     1602  41665647035  664   827939         1         7.99       334   \n",
+       "4     1602  41665647035  664   927712         1         0.59       334   \n",
+       "\n",
+       "   retail_disc  trans_time  week_no  coupon_disc  coupon_match_disc  \n",
+       "0          0.0          52       96          0.0                0.0  \n",
+       "1          0.0           8       96          0.0                0.0  \n",
+       "2         -0.6          46       96          0.0                0.0  \n",
+       "3          0.0        1741       96          0.0                0.0  \n",
+       "4         -0.4        1741       96          0.0                0.0  "
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_test.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>actual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>[880007, 883616, 931136, 938004, 940947, 94726...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>[820165, 820291, 826784, 826835, 829009, 85784...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   user_id                                             actual\n",
+       "0        1  [880007, 883616, 931136, 938004, 940947, 94726...\n",
+       "1        2  [820165, 820291, 826784, 826835, 829009, 85784..."
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "result_test = df_test.groupby(USER_COL)[ITEM_COL].unique().reset_index()\n",
     "result_test.columns=[USER_COL, ACTUAL_COL]\n",
@@ -2437,7 +2655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2452,7 +2670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2461,18 +2679,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "result_test['reranked_als_rec'] = result_test[USER_COL].apply(lambda user_id: rerank(user_id))"
+    "result_test['reranked_als_rec'] = result_test[USER_COL].apply(lambda user_id: rerank(user_id, df_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('reranked_als_rec', 0.938832891246679)\n",
+      "TOPK_PRECISION = 5\n"
+     ]
+    }
+   ],
    "source": [
     "print(*sorted(calc_precision(result_test, TOPK_PRECISION), key=lambda x: x[1], reverse=True),  f'TOPK_PRECISION = {TOPK_PRECISION}', sep='\\n')"
    ]
